[package]
name = "rustgraphs"
version = "0.1.0"
authors = ["Seth Bromberger <github@bromberger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph_matrix = { path = "../graph_matrix" }
ordered-float = "1.0.2"
priority-queue = "0.7.0"
bitvec = "0.17.3"
num = "0.3.0"
rayon = "1.3.1"
num_cpus = "1.0"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1

